# A-Tuples-Library

./: CMakeLists.txt  Functionsa.h  Functionsb.h  TupleFunctionsa.c  TupleFunctionsb.c  main.c  maina.c  mainb.c  readMe.md  sgets.c  sgets.h
